tests/snapshots/parser_error_fixtures/exposing_missing_close_dotdot.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/exposing_missing_close_dotdot.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Closing Paren

Expected `)` after `..` in exposing clause.

  examples/parser_errors/exposing_missing_close_dotdot.flx:3:1
  |
3 | fn main() {}
  | ^^

Hint:
  Wildcard exposing uses `exposing (..)`.
== stdout ==
<not executed>
